# Trans_app

./: .directory  .get_pointer.c.kate-swp  .screen_shot.cpp.kate-swp  CMakeLists.txt  README.md  app1.cpp  get_pointer  get_pointer.c  get_pointer.h  get_screen_size  get_screen_size.cpp  get_screen_size.h  gp_customized.cpp  mouse_click_event_test.cpp  screen_shot.cpp
History_files/: CMakeLists.txt  get_screen_size.h  gp_customized  partial_sh.cpp  screen_shot.cpp
test2/: .app1.cpp.kate-swp  .directory  a.out  aaa  app1.cpp  get_pointer.h
test3/: CMakeLists.txt  app1.cpp  is_key_pressed
test3/get_pointer_library/: CMakeLists.txt  get_pointer.cpp
test4/: CMakeLists.txt  app1.cpp  app2.cpp  get_pointer.cpp  is_key_pressed.cpp  key  keyboard_graping_test.cpp  mouse_click_event_test.cpp
test4/tinyxml_library/: CMakeLists.txt
tests/: .directory  .my_trial_with_tesseract.cpp.kate-swp  CMakeLists.txt  aaa  app1.cpp  binarize.h  cropped_test  cropped_test.cpp  get_pointer.h  my_trial_with_tesseract  my_trial_with_tesseract.cpp  tesseract_test  text_detect  text_detect.cpp
tests/engAraDictionaryFrom_ArabEyes-master/: engAraDictionary.sql
tests/translation_with_tinyxml/: .directory  a.out  main  main.cpp
tests/translation_with_tinyxml/temp/: Translat_final.cpp  Translate_final.cpp  Translate_xml.cpp  Translate_xml.h
tests/translation_with_tinyxml/tinyxml_work/Result/: a.out  main.cpp
tests/translation_with_tinyxml/tinyxml_work/creating_shared_library/: ReadMe.md  libStrans_xml.so.1.0
tests/translation_with_tinyxml/tinyxml_work/creating_shared_library/test/: a.out  main.cpp  trans_xml.h
tinyxml_work/Result/: ReadMe.md
tinyxml_work/creating_shared_library/shared_lib_for_tinyxml+transxml/: ReadMe.md
tinyxml_work/creating_shared_library/shared_lib_for_tinyxml+transxml/src/: trans_xml.cpp
tinyxml_work/creating_shared_library/shared_lib_for_tinyxmlonly/: ReadMe.md
tinyxml_work/creating_shared_library/shared_lib_for_tinyxmlonly/test/: Translate_xml.h  a.out  main.cpp
tinyxml_work/staticlibrary/: main  main.cpp
